--- a/WebApplication1/WebApplication1/Views/Calc/ServiceInjectionCalc.cshtml
+++ b/WebApplication1/WebApplication1/Views/Calc/ServiceInjectionCalc.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "ServiceInjectionCalc";
-@inject WebApplication1.Services.Idispatcher Calculate
+@inject WebApplication1.Services.ICalc Calculate
 }
 
 <h2>ServiceInjectionCalc</h2>
