--- a/Web4/Web4/Views/Multy/Index.cshtml
+++ b/Web4/Web4/Views/Multy/Index.cshtml
@@ -10,12 +10,12 @@
 <ul>
     <li>
         <h4>
-            <a href="/MultyStaged/SignUp_Stage1">Sign Up</a>
+            <a asp-controller="Multy" asp-action="SignUpFirst">Sign Up</a>
         </h4>
     </li>
     <li>
         <h4>
-            <a href="/MultyStaged/ResetPassword_Stage1">Reset Password</a>
+            <a asp-controller="Multy" asp-action="ResetPassword">Reset Password</a>
         </h4>
     </li>
 </ul>
