--- a/Web4/Web4/Views/Shared/_Layout.cshtml
+++ b/Web4/Web4/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="MultyStaged" asp-action="Index">Mockups</a></li>
+                    <li><a asp-area="" asp-controller="Multy" asp-action="Index">Mockups</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Controls</a></li>
 
                 </ul>
